# data-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: dataloader.json  dataprocessor.json
data_pipeline/: __init__.py  base_preprocessor.py  config.py  dataloader.py
tests/: __init__.py  test_base_preprocessor.py  test_config.py  test_dataloader.py
